gateway implementation